--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = "https://www.dorukhanserg.in/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy {year} Dorukhan SergIN. All rights reserved."
+copyright = "&copy; {year} Dorukhan SergIN. All rights reserved."
 
 ############################
 ## Advanced options below ##
