--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,7 +6,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Dorukhan SergIN"
+title = "N. Dorukhan Sergin"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -14,7 +14,7 @@ baseurl = "https://www.dorukhanserg.in/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; {year} Dorukhan SergIN. All rights reserved."
+copyright = "&copy; {year} N. Dorukhan Sergin. All rights reserved."
 
 ############################
 ## Advanced options below ##
