--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -21,7 +21,7 @@ copyright = "&copy; {year} N. Dorukhan Sergin. All rights reserved."
 ############################
 
 # Get last modified date for content from Git?
-enableGitInfo = false
+enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
