--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -268,7 +268,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-76742036-1"
   google_tag_manager = ""
 
 ############################
